POST de equipo/usuarios funcional ahora toca arrglar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -115,3 +115,22 @@
   }
 }
 
+
+/* FORMS */
+
+.uploadPost{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 500px;
+  border: 2px solid coral;
+}
+
+.CreatePost {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh -80px);
+}
