--- a/components/FormEquipos/styles.css
+++ b/components/FormEquipos/styles.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
 .uploadPost{
     display: flex;
     flex-direction: column;
@@ -24,4 +24,26 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh -80px);
+  }
+  header {
+    align-items: center;
+    background: #ffffffaa;
+    backdrop-filter: blur(5px);
+    border-bottom: 1px solid #eee;
+    height: 49px;
+    display: flex;
+    position: sticky;
+    top: 0;
+    width: 100%;
+  }
+
+  .mini-list{
+    min-height: 50%;
+    width: 100%;
+    padding: 4rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
