--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -134,3 +134,13 @@
   align-items: center;
   height: calc(100vh -80px);
 }
+
+.mini-list{
+  min-height: 100vh;
+  padding: 4rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
