--- a/components/CheckIcon/index.css
+++ b/components/CheckIcon/index.css
@@ -5,6 +5,7 @@
     stroke-miterlimit: 10;
     stroke: #7ac142;
     fill: none;
+    ;
     animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
   }
   
