--- a/components/FormEquipos/styles.css
+++ b/components/FormEquipos/styles.css
@@ -38,9 +38,10 @@
   }
 
   .mini-list{
-    min-height: 125px;
+    max-height: 125px;
     width: 100%;
-    padding: 4rem 0;
+    height: auto;
+    padding: 1rem 0;
     flex: 1;
     display: grid;
     flex-direction: column;
