--- a/components/RejectIcon/RejectIcon.module.css
+++ b/components/RejectIcon/RejectIcon.module.css
@@ -1,13 +1,13 @@
-.checkmark__circle {
+.rejectmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
   stroke-width: 2;
   stroke-miterlimit: 10;
-  stroke: #7ac142;
+  stroke: #e61d1d;
   fill: none;
   animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
-.checkmark {
+.rejectmark {
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -16,10 +16,10 @@
   stroke: #fff;
   stroke-miterlimit: 10;
   margin: 10% auto;
-  box-shadow: inset 0px 0px 0px #7ac142;
+  box-shadow: inset 0px 0px 0px #e22a2a;
   animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
 }
-.checkmark__check {
+.rejectmark__check {
   transform-origin: 50% 50%;
   stroke-dasharray: 29;
   stroke-dashoffset: 29;
@@ -40,6 +40,7 @@
 }
 @keyframes fill {
   100% {
-    box-shadow: inset 0px 0px 0px 30px #ec2f00;
+    box-shadow: inset 0px 0px 0px 30px #ee3304;
   }
 }
+
