--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@font-face {
+  font-family: "Kastelov";
+  src: url("./fonts/Kastelov\ -\ Axiforma\ ExtraBold.otf");
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Kastelov' bold;
 }
 
 a {
