--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Kastelov' bold;
+  font-family: 'Roboto Flex', sans-serif;
+  text-decoration: none;
 }
 
 a {
