--- a/components/Logo.js/Logo.module.css
+++ b/components/Logo.js/Logo.module.css
@@ -1,5 +1,5 @@
 .logoMain{
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     align-content: stretch;
@@ -7,4 +7,5 @@
     align-items: baseline;
     justify-items: end;
     font-size: 30px;
+    padding:0;
 }
