acomodo la lista para presentar los liks de editar y eliminar

--- a/components/SelectForm/index.module.css
+++ b/components/SelectForm/index.module.css
@@ -1,3 +1,42 @@
 .container{
     text-align: center;
 }
+
+.inputText {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 12px 0;
+    box-sizing: border-box;
+}
+
+.caja {
+  margin:20px auto 40px auto;	
+  border:1px solid #d9d9d9;
+  height:40px;
+  overflow: hidden;
+  width: 230px;
+  position:relative;
+}
+/* select {
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  height: 40px;
+  padding: 5px;
+  width: 250px;
+}
+select:focus{ outline: none;} */
+
+.caja::after{
+ content:"\025be";
+ display:table-cell;
+ padding-top:7px;
+ text-align:center;
+ width:30px;
+ height:40px;
+ background-color:#d9d9d9;
+ position:absolute;
+ top:0;
+ right:0px;	
+ pointer-events: none;
+}
