--- a/components/ListasUsuarios/index.module.css
+++ b/components/ListasUsuarios/index.module.css
@@ -1,11 +1,41 @@
-.miniList{
+.ContainerMiniList{
     width: 100%;
     height: 30vh;
     overflow-y: scroll;
     scrollbar-width: none;
     overflow-x: hidden;
     text-align: center;
+    padding: 20px;
 }
-.miniList ul{
+.ContainerMiniList ul{
     list-style-type: none;
 }
+
+.Lista{
+    width: 100%;
+    align-items: center;
+    background: #ffffffaa;
+    border: 1px solid red;
+    backdrop-filter: blur(10px); 
+    border-bottom: 1px solid #eee;
+    display: grid;
+    top: 20px;
+    height: fit-content;
+    justify-content: space-around;
+    left: 0;
+    margin: 0 auto;
+    position:sticky;
+    right: 0;
+}
+.ItemLista{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid red;
+}
+
+.ItemLista span{
+    width: auto;
+    padding: 15px;
+    border: 1px solid red;
+}
+
