quito scrollbar de la lista

--- a/components/ListasUsuarios/index.module.css
+++ b/components/ListasUsuarios/index.module.css
@@ -7,6 +7,15 @@
     text-align: center;
     padding: 20px;
 }
+
+.ContainerMiniList::-webkit-scrollbar{
+    display: block;
+    width: 5px;
+}
+.ContainerMiniList::-webkit-scrollbar-track{
+    background: transparent;
+}
+
 .ContainerMiniList ul{
     list-style-type: none;
 }
