--- a/styles/Forms.css
+++ b/styles/Forms.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
-    width: auto;
+    width: 300px;
     padding: 20px;
   }
   
